--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Test2</string>
+    <string name="todo">TODO</string>
+    <string name="textview">TextView</string>
+    <string name="kill_me_please">kill me please</string>
+    <string name="textview2">TextView</string>
+    <string name="todo2">TODO</string>
 </resources>
